--- a/index.html
+++ b/index.html
@@ -6,5 +6,15 @@
   </head>
   <body>
     <h1>Discover hidden places in the world around you</h1>
+      <p class="link"><a href="coming_soon.html">Download Excursion (Coming soon)</a></p>
+      <video src="./resources/videos/excursion.mp4" autoplay loop></video>
+    <h2>Your personal travel guide</h2>
+      <p  class="note">Excursion remembers places you like, and recommends new points of interest around you.</p>
+      <img src="./resources/images/camp.jpg"> <br/>
+      <br/>
+      <img src="./resources/images/phone.png">
+    <h2>Coming soon for iPhone and Android</h2>
+      <p class="link"><a href="coming_soon.html">Download Excursion (Coming soon)</a></p>
+      <p class="footnote">(©)Excursion</p>
   </body>
 </html>
